--- a/TEL_Web_App/TEL_Web_App.csproj
+++ b/TEL_Web_App/TEL_Web_App.csproj
@@ -138,8 +138,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\AllModels.cs" />
     <Compile Include="Models\Connection.cs" />
     <Compile Include="Models\Employee.cs" />
+    <Compile Include="Models\EmployeeLeave.cs" />
     <Compile Include="Models\Leave.cs" />
     <Compile Include="Models\PDSAHash.cs" />
     <Compile Include="Models\ProjectDb.cs" />
